tests/bad_reserved_name_struct.stderr
tests/bad_reserved_name_struct.sl:7:15: error: identifier prefix '__sl_' is reserved
