tests/bad_reserved_name_struct.sl
struct __sl_bad {}
